// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1. an error 1`] = `
<Context.Provider
  value={
    Object {
      "editionBreakpoint": "small",
      "fontScale": 1,
      "isArticleTablet": false,
      "isLandscape": false,
      "isPortrait": true,
      "isTablet": false,
      "narrowArticleBreakpoint": undefined,
      "orientation": "portrait",
      "sectionContentHeightTablet": 200,
      "sectionContentWidth": 300,
      "windowHeight": 400,
      "windowWidth": 300,
    }
  }
>
  <ArticleError />
</Context.Provider>
`;

exports[`2. loading 1`] = `
<Context.Provider
  value={
    Object {
      "editionBreakpoint": "small",
      "fontScale": 1,
      "isArticleTablet": false,
      "isLandscape": false,
      "isPortrait": true,
      "isTablet": false,
      "narrowArticleBreakpoint": undefined,
      "orientation": "portrait",
      "sectionContentHeightTablet": 200,
      "sectionContentWidth": 300,
      "windowHeight": 400,
      "windowWidth": 300,
    }
  }
>
  null
</Context.Provider>
`;

exports[`3. an article with no headline falls back to use shortheadline 1`] = `
<Context.Provider
  value={
    Object {
      "editionBreakpoint": "small",
      "fontScale": 1,
      "isArticleTablet": false,
      "isLandscape": false,
      "isPortrait": true,
      "isTablet": false,
      "narrowArticleBreakpoint": undefined,
      "orientation": "portrait",
      "sectionContentHeightTablet": 200,
      "sectionContentWidth": 300,
      "windowHeight": 400,
      "windowWidth": 300,
    }
  }
>
  <ArticleSkeleton>
    <View>
      <View>
        <ModalImage
          aspectRatio={1}
          rounded={true}
          uri={null}
        />
      </View>
      <Text>
        Some Short Headline
      </Text>
      <ArticleFlags
        longRead={false}
        withContainer={true}
      />
      <View>
        <View>
          <ArticleBylineWithLinks
            articleId="198c4b2f-ecec-4f34-be53-c89f83bc1b44"
            ast={
              Array [
                Object {
                  "byline": Array [
                    Object {
                      "attributes": Object {},
                      "children": Array [
                        Object {
                          "attributes": Object {
                            "value": "Some byline",
                          },
                          "children": Array [],
                          "name": "text",
                        },
                      ],
                      "name": "inline",
                    },
                  ],
                },
              ]
            }
            tooltipArrowOffset={120}
            tooltipOffsetX={-95}
            tooltipOffsetY={54}
          />
        </View>
        <View>
          <View>
            <Text>
              Friday March 13 2015, 6.54pm
            </Text>
            <Text>
              , The Times
            </Text>
          </View>
        </View>
      </View>
    </View>
    <View>
      <ModalImage
        aspectRatio={1.7777777777777777}
        caption={
          Object {
            "credits": "Some Credits",
            "text": "Some Caption",
          }
        }
        index={0}
        onImagePress={null}
        testIDProp="lead-image"
        uri="https://crop169.io"
      />
      <CenteredCaption
        credits="Some Credits"
        text="Some Caption"
      />
    </View>
  </ArticleSkeleton>
</Context.Provider>
`;

exports[`4. an article with ads 1`] = `
<Context.Provider
  value={
    Object {
      "editionBreakpoint": "small",
      "fontScale": 1,
      "isArticleTablet": false,
      "isLandscape": false,
      "isPortrait": true,
      "isTablet": false,
      "narrowArticleBreakpoint": undefined,
      "orientation": "portrait",
      "sectionContentHeightTablet": 200,
      "sectionContentWidth": 300,
      "windowHeight": 400,
      "windowWidth": 300,
    }
  }
>
  <ArticleSkeleton>
    <View>
      <View>
        <ModalImage
          aspectRatio={1}
          rounded={true}
          uri={null}
        />
      </View>
      <Text>
        Some Headline
      </Text>
      <ArticleFlags
        longRead={false}
        withContainer={true}
      />
      <View>
        <View>
          <ArticleBylineWithLinks
            articleId="198c4b2f-ecec-4f34-be53-c89f83bc1b44"
            ast={
              Array [
                Object {
                  "byline": Array [
                    Object {
                      "attributes": Object {},
                      "children": Array [
                        Object {
                          "attributes": Object {
                            "value": "Some byline",
                          },
                          "children": Array [],
                          "name": "text",
                        },
                      ],
                      "name": "inline",
                    },
                  ],
                },
              ]
            }
            tooltipArrowOffset={120}
            tooltipOffsetX={-95}
            tooltipOffsetY={54}
          />
        </View>
        <View>
          <View>
            <Text>
              Friday March 13 2015, 6.54pm
            </Text>
            <Text>
              , The Times
            </Text>
          </View>
        </View>
      </View>
    </View>
    <View>
      <ModalImage
        aspectRatio={1.7777777777777777}
        caption={
          Object {
            "credits": "Some Credits",
            "text": "Some Caption",
          }
        }
        index={0}
        onImagePress={null}
        testIDProp="lead-image"
        uri="https://crop169.io"
      />
      <CenteredCaption
        credits="Some Credits"
        text="Some Caption"
      />
    </View>
  </ArticleSkeleton>
</Context.Provider>
`;

exports[`7. an article with no author 1`] = `
<ArticleSkeleton>
  <View>
    <View>
      <ModalImage
        aspectRatio={1}
        rounded={true}
        uri={null}
      />
    </View>
    <View>
      <ArticleLabel
        color="#1D1D1B"
        title="Some Label"
      />
    </View>
    <Text>
      Some Headline
    </Text>
    <ArticleFlags
      flags={
        Array [
          Object {
            "expiryTime": "2019-03-14T12:00:00.000Z",
            "type": "NEW",
          },
        ]
      }
      longRead={false}
      withContainer={true}
    />
    <Text
      accessibilityRole="header"
      aria-level="2"
    >
      Some Standfirst
    </Text>
    <View>
      <View>
        <ArticleBylineWithLinks
          articleId="198c4b2f-ecec-4f34-be53-c89f83bc1b44"
          ast={
            Array [
              Object {
                "byline": Array [
                  Object {
                    "attributes": Object {},
                    "children": Array [
                      Object {
                        "attributes": Object {
                          "value": "Rick Broadbent",
                        },
                        "children": Array [],
                        "name": "text",
                      },
                    ],
                    "name": "inline",
                  },
                ],
                "image": null,
              },
            ]
          }
          tooltipArrowOffset={120}
          tooltipOffsetX={-95}
          tooltipOffsetY={54}
        />
      </View>
      <View>
        <View>
          <Text>
            Friday March 13 2015, 6.54pm
          </Text>
          <Text>
            , The Times
          </Text>
        </View>
      </View>
    </View>
  </View>
  <View>
    <ModalImage
      aspectRatio={1.7777777777777777}
      caption={
        Object {
          "credits": "Some Credits",
          "text": "Some Caption",
        }
      }
      index={0}
      onImagePress={null}
      testIDProp="lead-image"
      uri="https://crop169.io"
    />
    <CenteredCaption
      credits="Some Credits"
      text="Some Caption"
    />
  </View>
</ArticleSkeleton>
`;
